@@ -1,24 +1,24 @@
 package command.branch;
 
-import command.Command;
-import service.LibraryService;
-
 import java.util.List;
 
-public class RemoveBranchCommand implements Command {
-    private final LibraryService _libraryService;
+import command.Command;
+import service.LibraryBranchService;
 
-    public RemoveBranchCommand(LibraryService libraryService) {
-        _libraryService = libraryService;
+public class RemoveBranchCommand implements Command {
+    private final LibraryBranchService libraryBranchService;
+
+    public RemoveBranchCommand(LibraryBranchService libraryBranchService) {
+        this.libraryBranchService = libraryBranchService;
     }
 
     @Override
-    public void execute(List<String> args) throws Exception {
+    public void execute(final List<String> args) {
         if (args.size() != 1) {
             throw new IllegalArgumentException("Usage: REMOVE-BRANCH [branchCode]");
         }
 
-        var branchCode = args.get(0);
-        _libraryService.removeBranch(branchCode);
+        final String branchCode = args.getFirst();
+        libraryBranchService.removeLibraryBranch(branchCode);
     }
 }
